objects/MedProSC__ContactAddress__c.object
<CustomObject>
    <fields>
        <fullName>MedProSC__Address_line_1__c</fullName>
        <label>Address line 1</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__Address_line_2__c</fullName>
        <label>Address line 2</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__License_state__c</fullName>
        <label>License state</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__Mapping_Key_From_Mapping__c</fullName>
        <label>Mapping Key From Mapping</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__MedProID__c</fullName>
        <label>MedProID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__MedProMasterID__c</fullName>
        <label>MedProMasterID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__MedPro_Updated_TS__c</fullName>
        <label>MedPro_Updated_TS</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MedProSC__RelatedContact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ContactAddresses</relationshipLabel>
        <relationshipName>ContactAddresses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MedProSC__State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__State_license__c</fullName>
        <label>State license</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__TestDateMap__c</fullName>
        <label>TestDateMap</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MedProSC__TestNumberMap__c</fullName>
        <label>TestNumberMap</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MedProSC__TestTextMap__c</fullName>
        <label>TestTextMap</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__Zip__c</fullName>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>ContactAddress</label>
    <listViews>
        <fullName>MedProSC__All</fullName>
        <columns>NAME</columns>
        <columns>MedProSC__Address_line_1__c</columns>
        <columns>MedProSC__Address_line_2__c</columns>
        <columns>MedProSC__RelatedContact__c</columns>
        <columns>MedProSC__License_state__c</columns>
        <columns>MedProSC__MedProID__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Addr{00000}</displayFormat>
        <label>ContactAddress Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ContactAddresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>